--- a/web/index.html
+++ b/web/index.html
@@ -85,5 +85,9 @@
         </div>
     </div>
     <!--./Register-->
+
+    <!--Scripts-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!---->
 </body>
 </html>
