--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!--login-->
-    <div class="loginblock">
+    <div class="loginblock active">
         <div class="loginmarkup">
             <!--lb id loginblock-->
             <div class="lb_logo">INQUOX</div>
@@ -49,7 +49,7 @@
 
 
      <!--Register-->
-     <div class="registerblock active">
+     <div class="registerblock">
         <div class="loginmarkup">
             <!--lb id loginblock-->
             <div class="lb_logo">INQUOX</div>
@@ -87,7 +87,6 @@
     <!--./Register-->
 
     <!--Scripts-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!---->
 </body>
 </html>
