--- a/client/index.html
+++ b/client/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--css-->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/fontface.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fontface.css">
     <!--/css-->
     <title>Document</title>
 </head>
 <body>
     <!--login-->
-    <div class="loginblock active">
+    <div class="loginblock">
         <div class="loginmarkup">
             <!--lb id loginblock-->
             <div class="lb_logo">INQUOX</div>
@@ -49,7 +49,7 @@
 
 
      <!--Register-->
-     <div class="registerblock">
+     <div class="registerblock active">
         <div class="loginmarkup">
             <!--lb id loginblock-->
             <div class="lb_logo">INQUOX</div>
