--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
                     <a class="lb_ri_forgotPassw_t" href="">Forgot Password?</a>
                 </div>
                 <!--SignIN or UP botton-->
-                <div class="lb_ri_sign">
+                <button class="lb_ri_sign" type="submit">
                     <div class="lb_ri_sign_t">Sign In</div>
-                </div>
+                </button>
             </div>
             <!--have or not have account-->
             <div class="lb_else">
@@ -74,9 +74,9 @@
                     <input type="password" name="" id="" class="lb_ri_inputPassw-i">
                 </div>
                 <!--SignIN or UP botton-->
-                <div class="lb_ri_sign register">
+                <button class="lb_ri_sign register" type="submit">
                     <div class="lb_ri_sign_t">Sign Up</div>
-                </div>
+                </button>
             </div>
             <!--have or not have account-->
             <div class="lb_else register">
@@ -85,9 +85,9 @@
         </div>
     </div>
     <!--./Register-->
-    
+
     <!--Scripts-->
-    <script src="/js/giveactive.js"></script>
+    <script src="js/switchingLogReg.js"></script>
     <!---->
 </body>
 </html>
